<resources>
    <string name="app_name">Legends</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">user.email@web.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_my_games">My Games</string>
    <string name="menu_find_game">Find Game</string>
    <string name="menu_dice_roller">Dice Roller</string>
    <string name="legends">Legends</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="have_an_account"><u>Have an account? Sign In</u></string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="remember_me">Remember me</string>
    <string name="content_description">Create new group session</string>
    <string name="search_button">Search button</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_in">Sign In</string>
    <string name="api_key">AIzaSyDCchSvdKfLPE-gRgpMYG41J0h-UW5WVSQ</string>
    <string name="loading">Loading…</string>
    <string name="menu_profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_game_name">Enter Game Name</string>
    <string name="game_type">Game Type</string>
    <string name="enter_game_type">Enter Game Type</string>
    <string name="choose_location">Choose Location</string>
    <string name="set_home"><b>SET HOME</b></string>
    <string name="set_current_location"><b>SET CURRENT LOCATION</b></string>
    <string name="location_hiphen">Location:</string>
    <string name="description_optional">Description (optional)</string>
    <string name="enter_details_about_your_game">Enter details about your game</string>
    <string name="max_player_count">Max Player Count</string>
    <string name="min_player_count">Min Player Count</string>
    <string name="default_infinite">Default (&#8734;)</string>
    <string name="default_2">Default (2)</string>
    <string name="timing_optional">Timing (optional)</string>
    <string name="set_timing">Set Timing</string>
    <string name="from"><b>From</b></string>
    <string name="from_colon">From:</string>
    <string name="to"><b>To</b></string>
    <string name="to_colon">To:</string>
    <string name="create_game">Create Game</string>
    <string name="found_game"><b>Found Games</b></string>
    <string name="created_games"><b>Created Games</b></string>
    <string name="game_type_colon">Game Type:</string>
    <string name="timing_colon">Timing:</string>
    <string name="days_optional">Days (Optional)</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="every">Every</string>
    <string name="parenthesis_1">(1)</string>
    <string name="joined_games"><b>Joined Games</b></string>
    <string name="players_colon">Players:</string>
    <string name="backslash">/</string>
    <string name="word_null">NULL</string>
    <string name="dnd_5e"><![CDATA[D&D 5E]]></string>
    <string name="num_1">1</string>
    <string name="num_999">999</string>
    <string name="no_created_games">Looks like you haven&#8217;t created any games. <br />Click on the plus icon to create a new game.</string>
    <string name="default_find_games">Click on the search icon to find games!</string>
    <string name="add_filter"><b>ADD FILTER</b></string>
    <string name="distance_colon">Distance:</string>
    <string name="parenthesis_2">(2)</string>
    <string name="km">km</string>
    <string name="schedule_colon">Schedule:</string>
    <string name="format_23_59">Format: 23:59</string>
    <string name="invalid_filter_data">Please fill in proper details for selected filters.</string>
    <string name="find_game_time_hint">At least one field must be filled</string>
    <string name="description">Description</string>
    <string name="timing">Timing</string>
    <string name="in_parenthesis_not_provided">(Not provided)</string>
    <string name="schedule">Schedule</string>
    <string name="players">Players</string>
    <string name="open_parenthesis">(</string>
    <string name="closed_parenthesis">)</string>
    <string name="default_text_no_players">No players have joined this game yet.</string>
    <string name="request_join_game">Request Join Game</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_close">Close</string>
    <string name="no_joined_games">Looks like you haven&#8217;t joined any games.</string>
    <string name="requests">Requests</string>
    <string name="no_requests">No requests</string>
    <string name="joined_games_colon">Joined Games:</string>
    <string name="created_games_colon">Created Games:</string>
    <string name="current_home_location_colon">Current Home Location:</string>
    <string name="change_location">Change Location</string>
    <string name="bio">Bio</string>
    <string name="go_to_chat">Go to Chat</string>
    <string name="send_message">Send Message</string>
    <string name="no_messages">There aren&#8217;t any messages in this group chat. Be the first one to send one!</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="delete_account">Delete Account</string>
    <string name="leave_game">Leave Game</string>
    <string name="d100">d100</string>
    <string name="d20">d20</string>
    <string name="d12">d12</string>
    <string name="d10">d10</string>
    <string name="d8">d8</string>
    <string name="d6">d6</string>
    <string name="d4">d4</string>
    <string name="d2">d2</string>
    <string name="k">K</string>
    <string name="x">X</string>
    <string name="r">R</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="lower_k">k</string>
    <string name="lower_x">x</string>
    <string name="dc">DC</string>
    <string name="roll">Roll</string>
    <string name="dice_roller_legend">K = keep highest, k = keep lowest, X = drop highest, x = drop lowest, R = re-roll ones (once per die), DC = succeed if dice roll is ≥ DC</string>
    <string name="use_dice_roller"><u>Use Dice Roller</u></string>
    <string name="storage">Storage</string>
    <string name="delete_user_data_on_exit">Delete cache on exit</string>
    <string name="no">No</string>
    <string name="sync_options">Sync Options</string>
    <string name="sync_created_games_after_delay">Sync created games after delay</string>
    <string name="sync_joined_games_after_delay">Sync joined games after delay</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_2_km">2 km</string>
    <string name="default_filter_distance">Default filter distance</string>
    <string name="general">General</string>
    <string name="check_for_sync_after_delay">Check for sync after delay</string>
    <string name="_60_seconds">60 seconds</string>
    <string name="delete_all_cache_text">This will not delete any actual data, simply the files stored on this device.</string>
    <string name="delete_all_user_files">Delete all cache</string>
    <string name="yes">Yes</string>
    <string name="reset_settings">Reset settings</string>
    <string name="in_km">(in km)</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_1_hour">1 hour</string>
    <string name="_60">60</string>
    <string name="_30">30</string>
    <string name="_15">15</string>
    <string name="_10">10</string>
    <string name="_1_minute">1 minute</string>
    <string name="_2_minutes">2 minutes</string>
    <string name="_3_minutes">3 minutes</string>
    <string name="_4_minutes">4 minutes</string>
    <string name="_30_seconds">30 seconds</string>
    <string name="_90_seconds">90 seconds</string>
    <string name="_90">90</string>
    <string name="_120_seconds">120 seconds</string>
    <string name="_120">120</string>
    <string name="gm">GM</string>
    <string name="server">Server</string>
    <string name="mod">Mod</string>
    <string name="joined_colon">Joined:</string>
    <string name="moderation">Moderation</string>
    <string name="reports">Reports</string>
    <string name="reason_for_report_colon">Reason for report:</string>
    <string name="spam_account">Spam Account</string>
    <string name="harassment_or_abuse">Harassment or Abuse</string>
    <string name="inappropriate_behavior">Inappropriate Behavior</string>
    <string name="other_issue">Other Issue</string>
    <string name="enter_your_issue">Enter your issue</string>
    <string name="clarification_message_colon">Clarification Message:</string>
    <string name="optional_enter_additional_message">(Optional) Enter additional message</string>
    <string name="assigned_reports">Assigned Reports</string>
    <string name="my_reports">My Reports</string>
    <string name="unassigned_reports">Unassigned Reports</string>
    <string name="report_id_colon">Report ID:</string>
    <string name="reason_colon">Reason:</string>
    <string name="time_colon">Time:</string>
    <string name="none">none</string>
    <string name="assigned_to_colon">Assigned To:</string>
    <string name="reported_by_colon">Reported by:</string>
    <string name="no_reports">No reports</string>
    <string name="long_dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ultricies nisi tellus, et rutrum purus pellentesque id. Nullam velit enim, efficitur vel purus non, aliquet ornare tellus. Nunc sit amet elit sagittis, tincidunt urna vitae, sodales magna. Fusce neque lectus, ullamcorper a semper sit amet, faucibus non ante. Mauris commodo lectus ante, at luctus nisl fermentum ac. Donec cursus eleifend ex sit amet tempus. Donec a velit in enim volutpat faucibus. Etiam euismod blandit nisl, vitae tincidunt magna mattis eget. Even more text to make it even longer woooooooooooooooooooooooooooooo.\nMore content\n\nMoooooooooore!</string>
    <string name="reported_user_colon">Reported User:</string>
    <string name="uid_colon">UID:</string>
    <string name="username_colon">Username:</string>
    <string name="time_reported_colon">Time Reported:</string>
    <string name="additional_message_colon">Additional Message:</string>
    <string name="group_info_colon">Group Info:</string>
    <string name="group_id_colon">Group ID:</string>
    <string name="group_name_colon">Group Name:</string>
    <string name="assign_random_mod">Assign Random Mod</string>
    <string name="take_action_colon">Take Action:</string>
    <string name="send_warning">Warning</string>
    <string name="suspend">Suspend</string>
    <string name="ban">Ban</string>
    <string name="reasoning_required_colon">Reasoning (Required):</string>
    <string name="enter_reasoning_for_action_taken">Enter reasoning for action taken</string>
</resources>